[project]
name = "cerebra"
version = "0.1.0"
description = "Lightweight framework to orchestrate intelligent multi-agent workflows."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.3",
    "graphviz>=0.20.3",
    "groq>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
]

[project.urls]
repository = "https://github.com/ginoagostinelli/cerebra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

